# improv_randomizer

./: .gitignore  0.37.0  Improv_Random2.1.py  LICENSE.txt  MANIFEST.in  README.md  build_game.py  cast-ai2.txt  cast-configuration-tool.ipynb  cast.txt  config-default.cfg  experiment.json  games-ai2.json  games.csv  games.json  games.txt  gamesession.py  gamespace.py  main.py  players.txt  prompts.txt  pyproject.toml  run_sf.py  sandbox.py  utils.py
RandomChris/: __main__.py  gamesession.py  gamespace.py  utils.py
config/: cast.txt  games.json  prompts.txt
nbs/: 0.01_review_player_stats.ipynb  0.02_review_game_duration_stats.ipynb  0.03_review_logs_stats.ipynb  Configuration_tool.ipynb  WIP.01_workbench-for-lists.ipynb  WIP.02_draw_players.ipynb  WIP.02_game_sequence.ipynb  WIP.03_Game-objects.ipynb  WIP.03_organize_game_json.ipynb  WIP.03_rearrange_games.ipynb  WIP.04_configuration_tool.ipynb  WIP.10_discover_USB.ipynb  WIP.11_compare_json.ipynb  WIP.12_game_duration_stats.ipynb
